airflow/logs/dag_id=ml_pipeline_dvc/run_id=manual__2025-08-05T20:35:06.855147+00:00/task_id=train_dvc/attempt=1.log
[2025-08-05T20:35:47.391+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-08-05T20:35:47.529+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ml_pipeline_dvc.train_dvc manual__2025-08-05T20:35:06.855147+00:00 [queued]>
[2025-08-05T20:35:47.580+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ml_pipeline_dvc.train_dvc manual__2025-08-05T20:35:06.855147+00:00 [queued]>
[2025-08-05T20:35:47.583+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2025-08-05T20:35:47.664+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): train_dvc> on 2025-08-05 20:35:06.855147+00:00
[2025-08-05T20:35:47.690+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=2962) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2025-08-05T20:35:47.699+0000] {standard_task_runner.py:63} INFO - Started process 2963 to run task
[2025-08-05T20:35:47.699+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'ml_pipeline_dvc', 'train_dvc', 'manual__2025-08-05T20:35:06.855147+00:00', '--job-id', '42', '--raw', '--subdir', 'DAGS_FOLDER/ml_pipeline_dag_2.py', '--cfg-path', '/tmp/tmpwzx3867w']
[2025-08-05T20:35:47.704+0000] {standard_task_runner.py:91} INFO - Job 42: Subtask train_dvc
[2025-08-05T20:35:47.968+0000] {task_command.py:426} INFO - Running <TaskInstance: ml_pipeline_dvc.train_dvc manual__2025-08-05T20:35:06.855147+00:00 [running]> on host cb274dbeb17b
[2025-08-05T20:35:48.572+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='yas' AIRFLOW_CTX_DAG_ID='ml_pipeline_dvc' AIRFLOW_CTX_TASK_ID='train_dvc' AIRFLOW_CTX_EXECUTION_DATE='2025-08-05T20:35:06.855147+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-08-05T20:35:06.855147+00:00'
[2025-08-05T20:35:48.579+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-08-05T20:35:48.694+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2025-08-05T20:35:48.700+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/ml_pipeline && dvc repro train']
[2025-08-05T20:35:48.742+0000] {subprocess.py:86} INFO - Output:
[2025-08-05T20:35:59.250+0000] {subprocess.py:93} INFO - Stage 'preprocess' didn't change, skipping
[2025-08-05T20:35:59.684+0000] {subprocess.py:93} INFO - Running stage 'train':
[2025-08-05T20:35:59.692+0000] {subprocess.py:93} INFO - > python train/train_task.py
[2025-08-05T20:36:00.016+0000] {subprocess.py:93} INFO -   File "/opt/***/ml_pipeline/train/train_task.py", line 5
[2025-08-05T20:36:00.020+0000] {subprocess.py:93} INFO -     from mlflow
[2025-08-05T20:36:00.022+0000] {subprocess.py:93} INFO -                ^
[2025-08-05T20:36:00.024+0000] {subprocess.py:93} INFO - SyntaxError: invalid syntax
[2025-08-05T20:36:00.088+0000] {subprocess.py:93} INFO - ERROR: failed to reproduce 'train': failed to run: python train/train_task.py, exited with 1
[2025-08-05T20:36:00.859+0000] {subprocess.py:97} INFO - Command exited with return code 255
[2025-08-05T20:36:00.865+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-08-05T20:36:00.921+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 255.
[2025-08-05T20:36:00.958+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=ml_pipeline_dvc, task_id=train_dvc, run_id=manual__2025-08-05T20:35:06.855147+00:00, execution_date=20250805T203506, start_date=20250805T203547, end_date=20250805T203600
[2025-08-05T20:36:01.027+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 42 for task train_dvc (Bash command failed. The command returned a non-zero exit code 255.; 2963)
[2025-08-05T20:36:01.098+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-08-05T20:36:01.180+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-08-05T20:36:01.185+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
